[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Floor 1/Turret.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 400.0

[node name="Turret" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.580392, 0.145098, 0.0588235, 1 )
offset = Vector2( -10, 0 )
antialiased = true
polygon = PoolVector2Array( 0, 0, 20, 0, 20, 11, 10, 17, 0, 11 )

[node name="RotatingPart" type="Polygon2D" parent="Polygon2D"]
position = Vector2( 0, 11 )
color = Color( 0.580392, 0.145098, 0.0588235, 1 )
offset = Vector2( -3, 1.90735e-06 )
antialiased = true
polygon = PoolVector2Array( 0, 0, 6, 0, 6, 13, -1.66893e-06, 13 )

[node name="SmallLine" type="Line2D" parent="Polygon2D/RotatingPart"]
position = Vector2( 0, 9 )
z_index = -1
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 0.878431, 0.184314, 0.0431373, 1 )

[node name="RayCast2D" type="RayCast2D" parent="Polygon2D/RotatingPart"]
modulate = Color( 0.933333, 0.270588, 0.270588, 1 )
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( 0, 380 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="LineTween" type="Tween" parent="."]

[node name="WidthTween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
